--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,9 +1,20 @@
 ---
 layout: default
 ---
-<h2>{{ page.title }}</h2>
-<p class="meta">{{ page.date | date_to_string }}</p>
+<section class="post post-single" itemscope itemtype="http://schema.org/Article">
+    <header class="post-header">
+        <img class="post-avatar"
+         alt="Luís Dalmolin" src="http://www.gravatar.com/avatar/1a08c08cc8f79d1140c8d9cbaa974971?d=&s=50"
+         height="48" width="48">
 
-<div class="post">
-{{ content }}
-</div>
+        <h1 class="post-title">{{ page.title }}</h1>
+
+        <p class="post-meta">By <a class="post-author" href="https://plus.google.com/118015701305507171424/" rel="me">Luís Dalmolin</a></p>
+    </header><!-- .post-header -->
+
+    <div class="post-description">
+        {{ content }}
+
+        <div class="clear"></div>
+    </div><!-- .post-description -->
+</section><!-- .post -->
