Adicionado alguns dos trabalhos ja feitos no portfolio

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,25 +7,19 @@
 
     <title>{{ page.title }}</title>
 
-    <link rel="stylesheet" href="http://luisdalmolin.com.br/wp-content/themes/luisdalmolin/css/pure.css">
-    <link rel="stylesheet" href="http://luisdalmolin.com.br/wp-content/themes/luisdalmolin/style.css">
+    <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.4.2/pure-min.css">
+    <link rel="stylesheet" href="/css/main.css">
     <link rel="publisher" href="https://plus.google.com/118015701305507171424/posts">
 </head>
 
 <body>
     <div class="pure-g-r" id="layout">
-        <div class="sidebar pure-u">
+        <aside class="sidebar pure-u">
             <header class="header">
-                <hgroup>
-                    <h1 class="brand-title">Luís Dalmolin</h1>
-                </hgroup>
+                <h1 class="brand-title">Luís Dalmolin</h1>
 
                 <nav class="nav">
                     <ul class="nav-list">
-                        <li class="nav-item">
-                            <a class="pure-button" href="http://luisdalmolin.com.br/">Blog</a>
-                        </li>
-
                         <li class="nav-item">
                             <a class="pure-button" href="/projetos">Projetos</a>
                         </li>
@@ -36,12 +30,12 @@
                     </ul>
                 </nav>
             </header>
-        </div><!-- .sidebar -->
+        </aside><!-- .sidebar -->
 
         <div class="pure-u-1">
-            <div class="content">
+            <main class="content">
                 {{ content }}
-            </div><!-- .content -->
+            </main><!-- .content -->
 
             <footer class="footer">
                 <div class="pure-menu pure-menu-horizontal pure-menu-open">
