--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="no-js" lang="pt-br">
+<html lang="pt-br">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -7,47 +7,40 @@
 
     <title>{{ page.title }}</title>
 
-    <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.4.2/pure-min.css">
+    <link href='http://fonts.googleapis.com/css?family=Exo:400,600' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="/assets/stylesheets/css/main.css">
     <link rel="publisher" href="https://plus.google.com/118015701305507171424/posts">
 </head>
 
 <body>
-    <div class="pure-g-r" id="layout">
-        <aside class="sidebar pure-u">
-            <header class="header">
-                <h1 class="brand-title">Luís Dalmolin</h1>
+    <header class="header">
+        <h1 class="brand-title">Luís Dalmolin</h1>
 
-                <nav class="nav">
-                    <ul class="nav-list">
-                        <li class="nav-item">
-                            <a class="pure-button" href="/projetos">Projetos</a>
-                        </li>
+        <nav class="nav">
+            <ul class="nav-list">
+                <li class="nav-item">
+                    <a class="btn" href="/projetos">Projetos</a>
+                </li>
 
-                        <li class="nav-item">
-                            <a class="pure-button" href="/portfolio">Portfólio</a>
-                        </li>
-                    </ul>
-                </nav>
-            </header>
-        </aside><!-- .sidebar -->
+                <li class="nav-item">
+                    <a class="btn" href="/portfolio">Portfólio</a>
+                </li>
+            </ul>
+        </nav>
+    </header><!-- .header -->
 
-        <div class="pure-u-1">
-            <main class="content">
-                {{ content }}
-            </main><!-- .content -->
+    <main>
+        {{ content }}
+    </main><!-- .content -->
 
-            <footer class="footer">
-                <div class="pure-menu pure-menu-horizontal pure-menu-open">
-                    <ul>
-                        <li><a href="http://twitter.com/luisdalmolin">Twitter</a></li>
-                        <li><a href="http://github.com/luisdalmolin">Github</a></li>
-                        <li><a href="http://github.com/yui/pure/">Made with Pure CSS</a></li>
-                    </ul>
-                </div>
-            </footer>
-        </div><!-- .pure-u-1 --> 
-    </div><!-- .pure-g-r -->
+    <footer class="footer">
+        <div class="pure-menu pure-menu-horizontal pure-menu-open">
+            <ul>
+                <li><a href="http://twitter.com/luisdalmolin">Twitter</a></li>
+                <li><a href="http://github.com/luisdalmolin">Github</a></li>
+            </ul>
+        </div>
+    </footer>
 
 <script type="text/javascript">
 var _gaq = _gaq || [];
