--- a/assets/stylesheets/scss/components/_variables.scss
+++ b/assets/stylesheets/scss/components/_variables.scss
@@ -1,2 +1,9 @@
+$color-main: #ff2c55;
+
 $font-title: 'Exo', sans-serif;
 $font-default: sans-serif;
+
+// animations
+$animmation-effect: ease-in-out;
+$animmation-duration: 0.3s;
+$animmation-delay: 0.1s;
