Finalizada alteracao inicial do layout do site

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,17 +29,16 @@
         </nav>
     </header><!-- .header -->
 
-    <main>
+    <main class="content">
         {{ content }}
     </main><!-- .content -->
 
     <footer class="footer">
-        <div class="pure-menu pure-menu-horizontal pure-menu-open">
-            <ul>
-                <li><a href="http://twitter.com/luisdalmolin">Twitter</a></li>
-                <li><a href="http://github.com/luisdalmolin">Github</a></li>
-            </ul>
-        </div>
+        <ul>
+            <li><a class="btn" href="http://twitter.com/luisdalmolin">Twitter</a></li>
+            <li><a class="btn" href="http://github.com/luisdalmolin">Github</a></li>
+            <li><a class="btn" href="http://www.linkedin.com/in/luisdalmolin">LinkedIn</a></li>
+        </ul>
     </footer>
 
 <script type="text/javascript">
