--- a/assets/stylesheets/scss/components/_buttons.scss
+++ b/assets/stylesheets/scss/components/_buttons.scss
@@ -4,13 +4,29 @@
     background: none;
     color: #fff;
     text-decoration: none;
+    font-size: 15px;
     border: 1px solid #fff;
     @include border-radius(4px);
     @include transition(0.2s linear);
 
     &:hover {
         background: #fff;
-        color: #ff2c55;
+        color: $color-featured;
         @include transition(0.2s linear);
     }
+}
+
+.btn-primary {
+    background: $color-main;
+    color: #fff;
+    border: 1px solid $color-main;
+
+    &:hover {
+        background: #fff;
+        color: $color-main;
+    }
+}
+
+.btn-small {
+    font-size: 13px;
 }
