--- a/assets/stylesheets/scss/components/_variables.scss
+++ b/assets/stylesheets/scss/components/_variables.scss
@@ -1,4 +1,5 @@
-$color-main: #ff2c55;
+$color-main: #322e2d;
+$color-featured: #ff2c55;
 
 $font-title: 'Exo', sans-serif;
 $font-default: sans-serif;
@@ -7,3 +8,6 @@ $font-default: sans-serif;
 $animmation-effect: ease-in-out;
 $animmation-duration: 0.3s;
 $animmation-delay: 0.1s;
+
+// sizes
+$responside-mobile-width: 768px;
