--- a/assets/stylesheets/scss/main.scss
+++ b/assets/stylesheets/scss/main.scss
@@ -19,3 +19,5 @@
 // ===============================================================
 @import "core/general";
 @import "core/header";
+@import "core/content";
+@import "core/footer";
