--- a/assets/stylesheets/scss/core/_general.scss
+++ b/assets/stylesheets/scss/core/_general.scss
@@ -1,3 +1,13 @@
+body {
+    font-family: $font-title;
+    color: $color-main;
+}
+
+h1, h2, h3, h4, h5 {
+    font-family: $font-title;
+    color: $color-main;
+}
+
 .container {
     width: 90%;
     margin: 0 auto;
