--- a/assets/stylesheets/scss/core/_header.scss
+++ b/assets/stylesheets/scss/core/_header.scss
@@ -3,12 +3,13 @@
     text-align: center;
     font-family: $font-title;
     color: #fff;
-    @include linear-gradient(#ff2c55, #f8492c);
+    @include linear-gradient(#322e2d, lighten(#322e2d, 5%));
 
     h1 {
         margin: 0.5em 0 1em;
         font-size: 35px;
         font-weight: normal;
+        color: #fff;
     }
 }
 
