--- a/assets/stylesheets/scss/core/_header.scss
+++ b/assets/stylesheets/scss/core/_header.scss
@@ -3,19 +3,31 @@
     text-align: center;
     font-family: $font-title;
     color: #fff;
-    @include linear-gradient(#322e2d, lighten(#322e2d, 5%));
-
-    h1 {
-        margin: 0.5em 0 1em;
-        font-size: 35px;
-        font-weight: normal;
-        color: #fff;
-    }
 }
 
+    .header-profile-img {
+        float: left;
+        margin: 0 15px 0 0;
+        width: 50px;
+        height: 50px;
+        @include border-radius(50%);
+    }
+
+    .header-title {
+        float: left;
+        margin: 0px 60px 0 0;
+        font-size: 40px;
+        font-weight: bold;
+        color: #231f20;
+
+        a {
+            color: #231f20;
+            text-decoration: none;
+        }
+    }
+
     .nav {
-        display: table;
-        margin: 0 auto;
+        float: left;
     }
 
         .nav-list {
@@ -25,11 +37,39 @@
 
             .nav-item {
                 float: left;
-                margin: 0 25px 0 0;
+                margin: 0 5px 0 0;
                 list-style: none;
 
                 &:last-child {
                     margin-right: 0;
                 }
+            }
+        }
+
+    .nav-contacts {
+        float: right;
+        margin: 5px 0 0 0;
+        @include clearfix();
+    }
+
+        .nav-contacts-link {
+            float: left;
+            margin: 0 3px 0 0;
+            padding: 0;
+            width: 35px;
+            height: 35px;
+            line-height: 35px;
+            font-size: 14px;
+            color: #231f20;
+            text-decoration: none;
+            border: 1px solid #231f20;
+            @include border-radius(50%);
+            @include transition(.2s linear);
+
+            &:hover {
+                background: #231f20;
+                color: #fff;
+                border-color: #fff;
+                @include transition(.2s linear);
             }
         }
